--- a/index.html
+++ b/index.html
@@ -45,7 +45,29 @@
 </head>
 <body>
     <div id="wrap">
-        <div id="header"></div>
+        <div id="header">
+			<div class="inner">
+				<div class="header flex-between-center">
+					<div class="logo">
+						<a href="index.html" class="db">
+							<img src="./img/header/logo.svg" alt="logo">
+						</a>
+					</div>
+					<div class="menu">
+						<ul class="flex-between">
+							<li><a href="#">주문하기</a></li>
+							<li><a href="#">메뉴소개</a></li>
+							<li><a href="#">매장찾기</a></li>
+							<li><a href="#">창업안내</a></li>
+							<li><a href="#">이벤트</a></li>
+						</ul>
+					</div>
+					<div class="more-btn">
+						<img src="./img/header/free-icon-menu-2976215.png" alt="more-btn">
+					</div>
+				</div>
+			</div>
+		</div>
         <aside class="aside"></aside>
         <div id="content">
             <div class="main-slick-wrap"></div>
