--- a/index.html
+++ b/index.html
@@ -22,25 +22,8 @@
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-
-	<script src='js/lib/jquery-1.12.4.min.js'></script>
-	<script src='js/lib/jquery.easing.1.3.js'></script>
-	<script src='js/lib/prefixfree.min.js'></script>
-	<script src='js/lib/modernizr-custom.js'></script>
-
-
-	<!--[if (lte IE 9)]>
-		<script src='js/lib/IE9.js'></script>
-	<![endif]-->
-
-	<!--[if (lte IE 8)]>
-		<script src='js/lib/html5shiv.min.js'></script>
-		<link rel='stylesheet' href='#'>
-	<![endif]-->
-
-	<!--[if (lte IE 7)]>
-		<link rel='stylesheet' href='#'>
-	<![endif]-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
+	<script src="./js/script.js" defer></script>
 
 </head>
 <body>
@@ -48,11 +31,11 @@
         <div id="header">
 			<div class="inner">
 				<div class="header flex-between-center">
-					<div class="logo">
+					<h1 class="logo">
 						<a href="index.html" class="db">
 							<img src="./img/header/logo.svg" alt="logo">
 						</a>
-					</div>
+					</h1>
 					<div class="menu">
 						<ul class="flex-between">
 							<li><a href="#">주문하기</a></li>
@@ -63,7 +46,11 @@
 						</ul>
 					</div>
 					<div class="more-btn">
-						<img src="./img/header/free-icon-menu-2976215.png" alt="more-btn">
+						<a href="#" class="more-btn-wrap db">
+							<span class="bar bar1"></span>
+							<span class="bar bar2"></span>
+							<span class="bar bar3"></span>
+						</a>
 					</div>
 				</div>
 			</div>
