--- a/index.html
+++ b/index.html
@@ -55,7 +55,39 @@
 				</div>
 			</div>
 		</div>
-        <aside class="aside"></aside>
+        <aside class="aside">
+			<div class="aside-bg"></div>
+			<div class="aside-lnb">
+				<div class="aside-inner">
+					<button type="button" class="aside-close"></button>
+					<div class="aside-login">
+						<a href="#">Login</a>
+						<span class="bar"></span>
+						<a href="#">Join</a>
+					</div>
+					<a href="#"><img src="./img/more_menu/banner_lesserafim.jpg" alt="lesserafim"></a>
+					<div class="aside_scroll">
+						<ul>
+							<li><a href="#">브랜드</a></li>
+							<li><a href="#">주문하기</a></li>
+							<li><a href="#">e-쿠폰</a></li>
+							<li><a href="#">신제품</a></li>
+							<li><a href="#">메뉴소개</a></li>
+							<li><a href="#">매장찾기</a></li>
+							<li><a href="#">이벤트</a></li>
+							<li><a href="#">글로벌</a></li>
+							<li><a href="#">창업안내</a></li>
+							<li><a href="#">굽뉴스</a></li>
+							<li><a href="#">굽민의소리</a></li>
+						</ul>
+						<dl class="aside-num">
+							<dt>주문전화</dt>
+							<dd>1661-9494</dd>
+						</dl>
+					</div>
+				</div>
+			</div>
+		</aside>
         <div id="content">
             <div class="main-slick-wrap"></div>
             <div class="con-box oven-menu"></div>
