--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						<span class="bar"></span>
 						<a href="#">Join</a>
 					</div>
-					<a href="#"><img src="./img/more_menu/banner_lesserafim.jpg" alt="lesserafim"></a>
+					<a href="#" class="lesserafim_banner"><img src="./img/more_menu/banner_lesserafim.jpg" alt="lesserafim"></a>
 					<div class="aside_scroll">
 						<ul>
 							<li><a href="#">브랜드</a></li>
