--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					<button type="button" class="aside-close"></button>
 					<div class="aside-login">
 						<a href="#">Login</a>
-						<span class="bar"></span>
+						<span class="login-bar"></span>
 						<a href="#">Join</a>
 					</div>
 					<a href="#" class="lesserafim_banner"><img src="./img/more_menu/banner_lesserafim.jpg" alt="lesserafim"></a>
