--- a/index.html
+++ b/index.html
@@ -68,15 +68,47 @@
 					<a href="#" class="lesserafim_banner"><img src="./img/more_menu/banner_lesserafim.jpg" alt="lesserafim"></a>
 					<div class="aside_scroll">
 						<ul>
-							<li><a href="#">브랜드</a></li>
-							<li><a href="#">주문하기</a></li>
+							<li class="depth"><a href="#">브랜드</a>
+								<ul>
+									<li><a href="#">브랜드스토리</a></li>
+									<li><a href="#">경영철학</a></li>
+									<li><a href="#">인재채용</a></li>
+								</ul>
+							</li>
+							<li class="depth"><a href="#">주문하기</a>
+								<ul>
+									<li><a href="#">메뉴보기</a></li>
+									<li><a href="#">매장선택</a></li>
+								</ul>
+							</li>
 							<li><a href="#">e-쿠폰</a></li>
-							<li><a href="#">신제품</a></li>
-							<li><a href="#">메뉴소개</a></li>
+							<li class="depth"><a href="#">신제품</a>
+								<ul>
+									<li><a href="#">포토제닉 테이스트 피자</a></li>
+									<li><a href="#">최고의 고추.마늘 모았다!</a></li>
+									<li><a href="#">맵달떡볶이</a></li>
+									<li><a href="#">남해마늘 바사삭</a></li>
+								</ul>
+							</li>
+							<li class="depth"><a href="#">메뉴소개</a>
+								<ul>
+									<li><a href="#">전체</a></li>
+									<li><a href="#">치킨</a></li>
+									<li><a href="#">피자</a></li>
+									<li><a href="#">사이드</a></li>
+									<li><a href="#">세트</a></li>
+								</ul>
+							</li>
 							<li><a href="#">매장찾기</a></li>
 							<li><a href="#">이벤트</a></li>
 							<li><a href="#">글로벌</a></li>
-							<li><a href="#">창업안내</a></li>
+							<li class="depth"><a href="#">창업안내</a>
+								<ul>
+									<li><a href="#">프랜차이즈굽네</a></li>
+									<li><a href="#">창업프로세스 및 예상비용</a></li>
+									<li><a href="#">온라인 창업상담</a></li>
+								</ul>
+							</li>
 							<li><a href="#">굽뉴스</a></li>
 							<li><a href="#">굽민의소리</a></li>
 						</ul>
