--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
 					</h1>
 					<div class="menu">
 						<ul class="flex-between">
-							<li><a href="#">주문하기</a></li>
+							<li class="order"><a href="#">주문하기</a>
+								<div class="order-ob-wrap">
+									<div class="order-ob">
+										<button type="button"><img src="./img/header/order_ob01.svg" alt="order_ob01"><span>메뉴보기</span></button>
+										<button type="button"><img src="./img/header/order_ob02.svg" alt="order_ob02"><span>매장선택</span></button>
+									</div>
+								</div>
+							</li>
 							<li><a href="#">메뉴소개</a></li>
 							<li><a href="#">매장찾기</a></li>
 							<li><a href="#">창업안내</a></li>
