--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<meta name='Copyright' content=''>
 	<meta name='Robots' content='index,follow'>
 
-
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 	<link rel='stylesheet' href='css/reset.css'>
 	<link rel='stylesheet' href='css/style.css'>
 
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script src="./js/script.js" defer></script>
 
 </head>
@@ -128,7 +129,33 @@
 			</div>
 		</aside>
         <div id="content">
-            <div class="main-slick-wrap"></div>
+            <div class="main-slick-wrap">
+				<div class="main-vi-wrap">
+					<div class="banner-bg banner-bg1t">
+						<img src="./img/banner/cha/bage.jpeg" alt="bage">
+						<div class="banner-img">
+							<a href="#">
+								<img src="./img/banner/cha/29451548c39d4732819e54b1c3837d46.png" alt="banner-img">
+							</a>
+						</div>
+					</div>
+					<div class="banner-bg banner-bg2">
+						<img src="./img/banner/chi/goobne_bg_2.png" alt="goobne_bg_2">
+					</div>
+					<div class="banner-bg banner-bg3">
+						<img src="./img/banner/dduk/ddeok.jpeg" alt="ddeok">
+					</div>
+					<div class="banner-bg banner-bg4">
+						<img src="./img/banner/lesser/lesserafim.jpeg" alt="lesserafim">
+					</div>
+					<div class="banner-bg banner-bg5">
+						<img src="./img/banner/ocean/cha_back.jpeg" alt="cha_back">
+					</div>
+					<div class="banner-bg banner-bg6">
+						<img src="./img/banner/pizza/8ecc299423fa499f8404f2bcb6dfef8d.jpg" alt="back">
+					</div>
+				  </div>
+			</div>
             <div class="con-box oven-menu"></div>
             <div class="con-box goobnews"></div>
             <div class="con-box goobster"></div>
