--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE HTML>
 <html lang='ko'>
+
 <head>
 	<title> </title>
 	<meta charset='utf-8'>
@@ -15,21 +15,23 @@
 	<meta name='Copyright' content=''>
 	<meta name='Robots' content='index,follow'>
 
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
 	<link rel='stylesheet' href='css/reset.css'>
 	<link rel='stylesheet' href='css/style.css'>
 
-	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css'
+		integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 	<script src="./js/script.js" defer></script>
 
 </head>
+
 <body>
-    <div id="wrap">
-        <div id="header">
+	<div id="wrap">
+		<div id="header">
 			<div class="inner">
 				<div class="header flex-between-center">
 					<h1 class="logo">
@@ -42,8 +44,10 @@
 							<li class="order"><a href="#">주문하기</a>
 								<div class="order-ob-wrap">
 									<div class="order-ob">
-										<button type="button"><img src="./img/header/order_ob01.svg" alt="order_ob01"><span>메뉴보기</span></button>
-										<button type="button"><img src="./img/header/order_ob02.svg" alt="order_ob02"><span>매장선택</span></button>
+										<button type="button"><img src="./img/header/order_ob01.svg"
+												alt="order_ob01"><span>메뉴보기</span></button>
+										<button type="button"><img src="./img/header/order_ob02.svg"
+												alt="order_ob02"><span>매장선택</span></button>
 									</div>
 								</div>
 							</li>
@@ -63,7 +67,7 @@
 				</div>
 			</div>
 		</div>
-        <aside class="aside">
+		<aside class="aside">
 			<div class="aside-bg"></div>
 			<div class="aside-lnb">
 				<div class="aside-inner">
@@ -73,7 +77,8 @@
 						<span class="login-bar"></span>
 						<a href="#">Join</a>
 					</div>
-					<a href="#" class="lesserafim_banner"><img src="./img/more_menu/banner_lesserafim.jpg" alt="lesserafim"></a>
+					<a href="#" class="lesserafim_banner"><img src="./img/more_menu/banner_lesserafim.jpg"
+							alt="lesserafim"></a>
 					<div class="aside_scroll">
 						<ul>
 							<li class="depth"><a href="#">브랜드</a>
@@ -128,19 +133,33 @@
 				</div>
 			</div>
 		</aside>
-        <div id="content">
-            <div class="main-slick-wrap">
+		<div id="content">
+			<div class="main-slick-wrap">
 				<div class="main-vi-wrap">
-					<div class="banner-bg banner-bg1t">
+					<div class="banner-bg banner-bg1">
 						<img src="./img/banner/cha/bage.jpeg" alt="bage">
 						<div class="banner-img">
 							<a href="#">
-								<img src="./img/banner/cha/29451548c39d4732819e54b1c3837d46.png" alt="banner-img">
+								<img src="./img/banner/cha/29451548c39d4732819e54b1c3837d46.png" alt="pc">
 							</a>
 						</div>
 					</div>
 					<div class="banner-bg banner-bg2">
-						<img src="./img/banner/chi/goobne_bg_2.png" alt="goobne_bg_2">
+						<div class="banner-text">
+							<p>welcome</p>
+							<p class="mid">to the</p>
+							<p class="last">
+								Oven
+								<span>Universe</span>
+							</p>
+						</div>
+						<div class="banner-img2">
+							<img src="./img/banner/chi/goobne_bg_2.png" alt="goobne_bg_2">
+							<button class="goobne-btn btn1">
+								<div><img src="./img/banner/chi/main_bg_icon_01.png" alt="pc"></div>
+								<span><em>NEW</em>✨최강의<br>바사삭 등장</span>
+							</button>
+						</div>
 					</div>
 					<div class="banner-bg banner-bg3">
 						<img src="./img/banner/dduk/ddeok.jpeg" alt="ddeok">
@@ -154,15 +173,16 @@
 					<div class="banner-bg banner-bg6">
 						<img src="./img/banner/pizza/8ecc299423fa499f8404f2bcb6dfef8d.jpg" alt="back">
 					</div>
-				  </div>
+				</div>
 			</div>
-            <div class="con-box oven-menu"></div>
-            <div class="con-box goobnews"></div>
-            <div class="con-box goobster"></div>
-            <div class="con-box goobtube"></div>
-        </div>
-        <div id="footer"></div>
-    </div>
-</div>
+			<div class="con-box oven-menu"></div>
+			<div class="con-box goobnews"></div>
+			<div class="con-box goobster"></div>
+			<div class="con-box goobtube"></div>
+		</div>
+		<div id="footer"></div>
+	</div>
+	</div>
 </body>
+
 </html>
