이미지 이름 변경

--- a/index.html
+++ b/index.html
@@ -146,8 +146,10 @@
 					</div>
 					<div class="banner-bg banner-bg2">
 						<div class="banner-text">
-							<p>welcome</p>
+							<p class="first">welcome</p>
+							<br>
 							<p class="mid">to the</p>
+							<br>
 							<p class="last">
 								Oven
 								<span>Universe</span>
@@ -156,13 +158,20 @@
 						<div class="banner-img2">
 							<img src="./img/banner/chi/goobne_bg_2.png" alt="goobne_bg_2">
 							<button class="goobne-btn btn1">
-								<div><img src="./img/banner/chi/main_bg_icon_01.png" alt="pc"></div>
-								<span><em>NEW</em>✨최강의<br>바사삭 등장</span>
+								<span><em>NEW</em><br/>✨최강의<br>바사삭 등장</span>
 							</button>
+							<button class="goobne-btn btn2"></button>
+							<button class="goobne-menu-btn btn1">Oven</button>
+							<button class="goobne-menu-btn btn2">Basasak</button>
 						</div>
 					</div>
 					<div class="banner-bg banner-bg3">
 						<img src="./img/banner/dduk/ddeok.jpeg" alt="ddeok">
+						<div class="banner-img">
+							<a href="#">
+								<img src="./img/banner/dduk/" alt="pc">
+							</a>
+						</div>
 					</div>
 					<div class="banner-bg banner-bg4">
 						<img src="./img/banner/lesser/lesserafim.jpeg" alt="lesserafim">
