--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						<img src="./img/banner/dduk/ddeok.jpeg" alt="ddeok">
 						<div class="banner-img">
 							<a href="#">
-								<img src="./img/banner/dduk/" alt="pc">
+								<img src="./img/banner/dduk/6dc1cf3d275b47eca270fd0061bb9777.png" alt="pc">
 							</a>
 						</div>
 					</div>
