--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 	<meta name='Copyright' content=''>
 	<meta name='Robots' content='index,follow'>
 
-	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
+	<link rel="stylesheet" type="text/css" href="css/slick.css" />
+	<link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
 	<link rel='stylesheet' href='css/reset.css'>
 	<link rel='stylesheet' href='css/style.css'>
 
@@ -24,7 +26,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script type="text/javascript" src="js/slick.min.js"></script>
 	<script src="./js/script.js" defer></script>
 
 </head>
@@ -136,11 +138,19 @@
 		<div id="content">
 			<div class="main-slick-wrap">
 				<div class="main-vi-wrap">
-					<div class="banner-bg banner-bg1">
-						<img src="./img/banner/cha/bage.jpeg" alt="bage">
+					<div class="banner-bg banner-bg0">
+						<img class="banner-bg-img" src="./img/banner/cha2/pc.jpeg" alt="bage">
 						<div class="banner-img">
 							<a href="#">
-								<img src="./img/banner/cha/29451548c39d4732819e54b1c3837d46.png" alt="pc">
+								<img src="./img/banner/cha2/pc.png" alt="pc">
+							</a>
+						</div>
+					</div>
+					<div class="banner-bg banner-bg1">
+						<img class="banner-bg-img" src="./img/banner/cha/bage.jpeg" alt="bage">
+						<div class="banner-img">
+							<a href="#">
+								<img src="./img/banner/cha/pc.png" alt="pc">
 							</a>
 						</div>
 					</div>
@@ -155,33 +165,51 @@
 								<span>Universe</span>
 							</p>
 						</div>
-						<div class="banner-img2">
-							<img src="./img/banner/chi/goobne_bg_2.png" alt="goobne_bg_2">
-							<button class="goobne-btn btn1">
-								<span><em>NEW</em><br/>✨최강의<br>바사삭 등장</span>
-							</button>
-							<button class="goobne-btn btn2"></button>
-							<button class="goobne-menu-btn btn1">Oven</button>
-							<button class="goobne-menu-btn btn2">Basasak</button>
-						</div>
+						<a href="#">
+							<div class="banner-img2">
+								<img src="./img/banner/chi/goobne_bg_2.png" alt="goobne_bg_2">
+								<button class="goobne-btn btn1">
+									<span><em>NEW</em><br />✨최강의<br>바사삭 등장</span>
+								</button>
+								<button class="goobne-btn btn2"></button>
+								<button class="goobne-menu-btn btn1">Oven</button>
+								<button class="goobne-menu-btn btn2">Basasak</button>
+							</div>
+						</a>
 					</div>
 					<div class="banner-bg banner-bg3">
-						<img src="./img/banner/dduk/ddeok.jpeg" alt="ddeok">
+						<img class="banner-bg-img" src="./img/banner/dduk/ddeok.jpeg" alt="ddeok">
 						<div class="banner-img">
 							<a href="#">
-								<img src="./img/banner/dduk/6dc1cf3d275b47eca270fd0061bb9777.png" alt="pc">
+								<img src="./img/banner/dduk/pc.png" alt="pc">
 							</a>
 						</div>
 					</div>
 					<div class="banner-bg banner-bg4">
-						<img src="./img/banner/lesser/lesserafim.jpeg" alt="lesserafim">
+						<img class="banner-bg-img" src="./img/banner/lesser/lesserafim.jpeg" alt="lesserafim">
+						<div class="banner-img">
+							<a href="#">
+								<img src="./img/banner/lesser/pc.png" alt="pc">
+							</a>
+						</div>
 					</div>
 					<div class="banner-bg banner-bg5">
-						<img src="./img/banner/ocean/cha_back.jpeg" alt="cha_back">
+						<img class="banner-bg-img" src="./img/banner/ocean/cha_back.jpeg" alt="cha_back">
+						<div class="banner-img">
+							<a href="#">
+								<img src="./img/banner/ocean/pc.png" alt="pc">
+							</a>
+						</div>
 					</div>
 					<div class="banner-bg banner-bg6">
-						<img src="./img/banner/pizza/8ecc299423fa499f8404f2bcb6dfef8d.jpg" alt="back">
+						<img class="banner-bg-img" src="./img/banner/pizza/pc_bg.jpg" alt="back">
+						<div class="banner-img">
+							<a href="#">
+								<img src="./img/banner/pizza/6cab1e54c09e413c966814cb348ba5f0.png" alt="pc">
+							</a>
+						</div>
 					</div>
+
 				</div>
 			</div>
 			<div class="con-box oven-menu"></div>
