--- a/index.html
+++ b/index.html
@@ -212,7 +212,27 @@
 
 				</div>
 			</div>
-			<div class="con-box oven-menu"></div>
+			<div class="con-box oven-menu flex-between">
+				<div class="text-wrap">
+					<div class="text-wrap-1">
+						<span class="first">GoobNe</span>
+						<span class="second">Chicken</span>
+						<span class="third">Oven Menu</span>
+					</div>
+				</div>
+				<div class="img-wrap">
+					<div class="img-wrap-1">
+						<div class="img-wrap-1-1">
+							<div class="chicken"></div>
+							<div class="dessert"></div>
+						</div>
+						<div class="img-wrap-1-2">
+							<div class="pizza"></div>
+							<div class="best-set"></div>
+						</div>
+					</div>
+				</div>
+			</div>
 			<div class="con-box goobnews"></div>
 			<div class="con-box goobster"></div>
 			<div class="con-box goobtube"></div>
