--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 				</div>
 			</div>
 			<div class="con-box oven-menu flex-between">
-				<div class="text-wrap">
-					<div class="text-wrap-1">
+				<div class="text-wrap flex-center">
+					<div class="text-wrap-1 flex">
 						<span class="first">GoobNe</span>
 						<span class="second">Chicken</span>
 						<span class="third">Oven Menu</span>
@@ -223,12 +223,12 @@
 				<div class="img-wrap">
 					<div class="img-wrap-1">
 						<div class="img-wrap-1-1">
-							<div class="chicken"></div>
-							<div class="dessert"></div>
+							<div class="food chicken"></div>
+							<div class="food dessert"></div>
 						</div>
 						<div class="img-wrap-1-2">
-							<div class="pizza"></div>
-							<div class="best-set"></div>
+							<div class="food pizza"></div>
+							<div class="food best-set"></div>
 						</div>
 					</div>
 				</div>
