--- a/index.html
+++ b/index.html
@@ -237,16 +237,16 @@
 					<div class="oven-slide-wrap">
 						<div class="oven-slide">
 							<div class="mfood mchicken">
-								<img src="./img/oven_menu/1.jpg" alt="">
-							</div>
-							<div class="mfood mdessert">
-								<img src="./img/oven_menu/2.jpg" alt="">
+								<a href="#"><img src="./img/oven_menu/1.jpg" alt="chicken"></a>
 							</div>
 							<div class="mfood mpizza">
-								<img src="./img/oven_menu/3.jpg" alt="">
+								<a href="#"><img src="./img/oven_menu/2.jpg" alt="pizza"></a>
+							</div>
+							<div class="mfood mdessert">
+								<a href="#"><img src="./img/oven_menu/3.jpg" alt="dessert"></a>
 							</div>
 							<div class="mfood mbest_set">
-								<img src="./img/oven_menu/4.jpg" alt="">
+								<a href="#"><img src="./img/oven_menu/4.jpg" alt="best_set"></a>
 							</div>
 						</div>
 					</div>
