--- a/index.html
+++ b/index.html
@@ -16,17 +16,18 @@
 	<meta name='Robots' content='index,follow'>
 
 
-	<link rel="stylesheet" type="text/css" href="css/slick.css" />
-	<link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
-	<link rel='stylesheet' href='css/reset.css'>
-	<link rel='stylesheet' href='css/style.css'>
+	<link rel="stylesheet" type="text/css" href="./css/slick.css" />
+	<link rel="stylesheet" type="text/css" href="./css/slick-theme.css" />
+	<link rel='stylesheet' href='./css/slick.css'>
+	<link rel="stylesheet" href="./css/root.css">
+	<link rel='stylesheet' href='./css/style.css'>
 
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css'
 		integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-	<script type="text/javascript" src="js/slick.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
+	<script type="text/javascript" src="js/slick.min.js" defer></script>
 	<script src="./js/script.js" defer></script>
 
 </head>
@@ -252,7 +253,37 @@
 					</div>
 				</div>
 			</div>
-			<div class="con-box goobnews"></div>
+			<div class="con-box goobnews flex">
+				<div class="news-img-wrap">
+					<div class="news-around-wrap">
+						<h2>GoobNe</h2>
+						<div class="news-around">
+							<div class="news-img">
+								<img src="./img/goobnews/p_1.png" alt="">
+							</div>
+							<div class="news-around-text-wrap">
+								<div class="news-around-text flex-center">
+									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+								</div>
+								<div class="news-around-text flex-center">
+									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+								</div>
+								<div class="news-around-text flex-center">
+									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+								</div>
+								<div class="news-around-text flex-center">
+									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="news-text-wrap"></div>
+			</div>
 			<div class="con-box goobster"></div>
 			<div class="con-box goobtube"></div>
 		</div>
