--- a/index.html
+++ b/index.html
@@ -286,16 +286,16 @@
 					<div class="news-text news-title flex-center">
 						<h3>GoobNews</h3>
 					</div>
-					<div class="news-text flex-center">
+					<div class="news-text news-content flex-center active">
 						<p>굽네, 포토제닉 테이스트 ‘르세라핌 인 시카고’ 광고 공개</p>
 					</div>
-					<div class="news-text flex-center">
+					<div class="news-text news-content flex-center">
 						<p>[브랜드] 굽네, 모델로 르세라핌 발탁…신제품 티저 광고 공개</p>
 					</div>
-					<div class="news-text flex-center">
+					<div class="news-text news-content flex-center">
 						<p>[브랜드] 굽네, 대한적십자사와 MOU 체결… 생명나눔 캠페인 앞장</p>
 					</div>
-					<div class="news-text flex-center">
+					<div class="news-text news-content flex-center">
 						<p>[신제품] 굽네, 오리지널∙고추바사삭 ‘곱빼기’ 출시… ’먹그레이드’ 트렌드 겨냥</p>
 					</div>
 				</div>
