굽뉴스 완성

--- a/index.html
+++ b/index.html
@@ -253,50 +253,96 @@
 					</div>
 				</div>
 			</div>
-			<div class="con-box goobnews flex">
-				<div class="news-img-wrap">
-					<div class="news-around-wrap">
-						<h2>GoobNe</h2>
-						<div class="news-around">
-							<div class="news-img">
-								<img src="./img/goobnews/p_1.png" alt="">
-							</div>
-							<div class="news-around-text-wrap">
-								<div class="news-around-text flex-center">
-									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+			<div class="con-box goobnews">
+				<div class="goobnews-pc flex">
+					<div class="news-img-wrap">
+						<div class="news-around-wrap">
+							<h2>GoobNe</h2>
+							<div class="news-around">
+								<div class="news-img">
+									<img src="./img/goobnews/p_1.png" alt="">
 								</div>
-								<div class="news-around-text flex-center">
-									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-								</div>
-								<div class="news-around-text flex-center">
-									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-								</div>
-								<div class="news-around-text flex-center">
-									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-									<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+								<div class="news-around-text-wrap">
+									<div class="news-around-text flex-center">
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									</div>
+									<div class="news-around-text flex-center">
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									</div>
+									<div class="news-around-text flex-center">
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									</div>
+									<div class="news-around-text flex-center">
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					<div class="news-text-wrap flex-center">
+						<div class="news-text news-title flex-center">
+							<h3>GoobNews</h3>
+						</div>
+						<div class="news-text news-content flex-center active">
+							<p>굽네, 포토제닉 테이스트 ‘르세라핌 인 시카고’ 광고 공개</p>
+						</div>
+						<div class="news-text news-content flex-center">
+							<p>[브랜드] 굽네, 모델로 르세라핌 발탁…신제품 티저 광고 공개</p>
+						</div>
+						<div class="news-text news-content flex-center">
+							<p>[브랜드] 굽네, 대한적십자사와 MOU 체결… 생명나눔 캠페인 앞장</p>
+						</div>
+						<div class="news-text news-content flex-center">
+							<p>[신제품] 굽네, 오리지널∙고추바사삭 ‘곱빼기’ 출시… ’먹그레이드’ 트렌드 겨냥</p>
+						</div>
+					</div>
 				</div>
-				<div class="news-text-wrap flex-center">
-					<div class="news-text news-title flex-center">
-						<h3>GoobNews</h3>
-					</div>
-					<div class="news-text news-content flex-center active">
-						<p>굽네, 포토제닉 테이스트 ‘르세라핌 인 시카고’ 광고 공개</p>
-					</div>
-					<div class="news-text news-content flex-center">
-						<p>[브랜드] 굽네, 모델로 르세라핌 발탁…신제품 티저 광고 공개</p>
-					</div>
-					<div class="news-text news-content flex-center">
-						<p>[브랜드] 굽네, 대한적십자사와 MOU 체결… 생명나눔 캠페인 앞장</p>
-					</div>
-					<div class="news-text news-content flex-center">
-						<p>[신제품] 굽네, 오리지널∙고추바사삭 ‘곱빼기’ 출시… ’먹그레이드’ 트렌드 겨냥</p>
+				<div class="goobnews-m">
+					<div class="inner">
+						<h3>Goobnews</h2>
+						 <ul>
+							<li>
+								<div class="mgoobnews-img">
+									<img src="./img/goobnews/m_1.png" alt="m_1">
+								</div>
+								<div class="mgoobnews-text">
+									<h4>[브랜드]</h4>
+									<p>굽네, 포토제닉 테이스트 ‘르세라핌 인 시카고’ 광고 공개</p>
+								</div>
+							</li>
+							<li>
+								<div class="mgoobnews-img">
+									<img src="./img/goobnews/m_2.png" alt="m_2">
+								</div>
+								<div class="mgoobnews-text">
+									<h4>[브랜드]</h4>
+									<p>굽네, 모델로 르세라핌 발탁…신제품 티저 광고 공개</p>
+								</div>
+							</li>
+							<li>
+								<div class="mgoobnews-img">
+									<img src="./img/goobnews/m_3.jpg" alt="m_3">
+								</div>
+								<div class="mgoobnews-text">
+									<h4>[브랜드]</h4>
+									<p>굽네, 대한적십자사와 MOU 체결… 생명나눔 캠페인 앞장</p>
+								</div>
+							</li>
+							<li>
+								<div class="mgoobnews-img">
+									<img src="./img/goobnews/m_4.png" alt="m_4">
+								</div>
+								<div class="mgoobnews-text">
+									<h4>[신제품]</h4>
+									<p>굽네, 오리지널∙고추바사삭 ‘곱빼기’ 출시… ’먹그레이드’ 트렌드 겨냥</p>
+								</div>
+							</li>
+						 </ul>
 					</div>
 				</div>
 			</div>
