굽스타 마크업 완료

--- a/index.html
+++ b/index.html
@@ -346,7 +346,61 @@
 					</div>
 				</div>
 			</div>
-			<div class="con-box goobster"></div>
+			<div class="con-box goobster ">
+				<div class="goobster-wrap flex">
+					<div class="goobster-bg3 goobster-beige"></div>
+					<div class="goobster-bg7 flex-center">
+						<h2>Goobsters</h2>
+					</div>
+				</div>
+				<div class="goobster-wrap flex">
+					<div class="goobster-bg5 goobster-beige"></div>
+					<div class="goobster-bg5"></div>
+				</div>
+				<div class="goobster-wrap flex">
+					<div class="goobster-bg7 goobster-beige"></div>
+					<div class="goobster-bg3"></div>
+				</div>
+				<div class="goobster-img">
+					<ul class="flex-center">
+						<li>
+							<a href="#">
+								<img src="./img/goobster/1.png" alt="1">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./img/goobster/2.png" alt="2">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./img/goobster/3.png" alt="3">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./img/goobster/4.png" alt="4">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./img/goobster/5.jpg" alt="5">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./img/goobster/6.png" alt="6">
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="./img/goobster/7.png" alt="7">
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 			<div class="con-box goobtube"></div>
 		</div>
 		<div id="footer"></div>
