슬릭 쓰기 전

--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
 				<div class="goobster-wrap flex">
 					<div class="goobster-bg3 goobster-beige"></div>
 					<div class="goobster-bg7 flex-center">
-						<h2>Goobsters</h2>
+						<h2><img src="./img/goobster/title-instar.svg" alt="insta"> Goobsters</h2>
 					</div>
 				</div>
 				<div class="goobster-wrap flex">
@@ -362,7 +362,7 @@
 					<div class="goobster-bg3"></div>
 				</div>
 				<div class="goobster-img">
-					<ul class="flex-center">
+					<ul class="flex">
 						<li>
 							<a href="#">
 								<img src="./img/goobster/1.png" alt="1">
