굽튜브 완성

--- a/index.html
+++ b/index.html
@@ -401,7 +401,77 @@
 					</ul>
 				</div>
 			</div>
-			<div class="con-box goobtube"></div>
+			<div class="con-box goobtube">
+				<h2>Goobtube</h2>
+				<div class="nfmc flex">
+					<ul class="flex">
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+						<li class="flex-center">💥 NO FRY MORE CRISPY</li>
+					</ul>
+				</div>
+				<div class="out-in-img inner">
+					<div class="oii active">
+						<div class="oii-img">
+							<img src="./img/goobtube/1.png" alt="1">
+						</div>
+						<div class="oii-text">
+							<h3>굽네ㅣ르세라핌<br>LE SSERAFIM in CHICAGO🍕</h3>
+							<p>넋놓고 바라보게 돼서<br> 
+								최소 6번은 돌려봐야 예의인<br>
+								르세라핌 in 시카고 풀버전🤍</p>
+							<a href="#">영상 보러가기</a>
+						</div>
+					</div>
+					<div class="oii">
+						<div class="oii-img">
+							<img src="./img/goobtube/2.jpg" alt="2">
+						</div>
+						<div class="oii-text">
+							<h3>[굽네 남해마늘 바사삭]<br>이번 전투에서 우린 다 져야만 한다!<br> 다지고 구워서 마늘정복!</h3>
+							<p>치킨 역사에 기록될 위대한 전쟁,<br>
+								이 전쟁의 승리는 바로 나 구울레옹의 것!</p>
+							<a href="#">영상 보러가기</a>
+						</div>
+					</div>
+					<div class="oii">
+						<div class="oii-img">
+							<img src="./img/goobtube/3.jpg" alt="3">
+						</div>
+						<div class="oii-text">
+							<h3>No Fry, More Crispy!<br>굽네 바사삭 유니버스가 열린다!</h3>
+							<p>구울레옹의 명을 받아 바삭함을 <br>찾으러 떠난 바사삭 원정대,<br>
+								콜럼바삭, 치즈바라, 바삭트라!<br></p>
+							<a href="#">영상 보러가기</a>
+						</div>
+					</div>
+					<div class="oii">
+						<div class="oii-img">
+							<img src="./img/goobtube/4.jpg" alt="4">
+						</div>
+						<div class="oii-text">
+							<h3>[굽네 불금치킨] 구울레옹,<br>구워서 불맛 정복!<br>내 오븐에 불가능은 없다!</h3>
+							<p>나는 구울레옹... 내 역사는<br> 튀길레옹과의 전투의 역사였다...⚔<br>
+								굽네 🔥불금🥇치킨!</p>
+							<a href="#">영상 보러가기</a>
+						</div>
+					</div>
+					<div class="prev_arrow"></div>
+					<div class="next_arrow"></div>
+				</div>
+			</div>
 		</div>
 		<div id="footer"></div>
 	</div>
