--- a/index.html
+++ b/index.html
@@ -473,7 +473,52 @@
 				</div>
 			</div>
 		</div>
-		<div id="footer"></div>
+		<div id="footer" class="footer">
+			<div class="inner">
+				<div class="footer-up flex-between">
+					<div class="fnumber">
+						<ul>
+							<li>
+								<p class="sub-text">전화주문</p>
+								<p class="tel">1661-9494</p>
+							</li>
+							<li>
+								<p class="sub-text">창업문의</p>
+								<p class="tel">1899-9458</p>
+							</li>
+						</ul>
+					</div>
+					<div class="ftext">
+						<ul class="flex-between">
+							<li><a href="#">이용약관</a></li>
+							<li><a href="#">개인정보처리방침</a></li>
+							<li><a href="#">이메일무단수집거부</a></li>
+							<li><a href="#">찾아오시는길</a></li>
+						</ul>
+					</div>
+					<div class="ficon">
+						<ul class="flex-between">
+							<li><a href="#"><img src="./img/footer/instargram_icon.svg" alt="insta"></a></li>
+							<li><a href="#"><img src="./img/footer/facebook_icon.svg" alt="face"></a></li>
+							<li><a href="#"><img src="./img/footer/blog_icon.svg" alt="blog"></a></li>
+							<li><a href="#"><img src="./img/footer/youtube_icon.svg" alt="you"></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="footer-down">
+					<ul>
+						<li>주식회사 지앤푸드 대표자 : 정태용</li>
+						<li><address>주소 서울특별시 강서구 강서로 318 (내발산동 677) 지앤빌딩</address></li>
+						<li>사업자등록번호 137-81-80324</li>
+						<li>통신판매업신고번호 제 2014-서울양천-0426호</li>
+						<li><address>TEL 02-2648-2005</address></li>
+						<li><address>FAX 02-2648-9458</address></li>
+						<li>광고 제휴 문의 mkt@gngrp.com</li>
+					</ul>
+					<p>© 2009-2016 GOOBNE.CO.ALL RIGHT RESERVED</p>
+				</div>
+			</div>
+		</div>
 	</div>
 	</div>
 </body>
