--- a/index.html
+++ b/index.html
@@ -156,27 +156,29 @@
 						</div>
 					</div>
 					<div class="banner-bg banner-bg2">
-						<div class="banner-text">
-							<p class="first">welcome</p>
-							<br>
-							<p class="mid">to the</p>
-							<br>
-							<p class="last">
-								Oven
-								<span>Universe</span>
-							</p>
-						</div>
-						<a href="#">
-							<div class="banner-img2">
-								<img src="./img/banner/chi/goobne_bg_2.png" alt="goobne_bg_2">
-								<button class="goobne-btn btn1">
-									<span><em>NEW</em><br />✨최강의<br>바사삭 등장</span>
-								</button>
-								<button class="goobne-btn btn2"></button>
-								<button class="goobne-menu-btn btn1">Oven</button>
-								<button class="goobne-menu-btn btn2">Basasak</button>
+						<div class="banner-bg2-wrap">
+							<div class="banner-text">
+								<p class="first">welcome</p>
+								<br>
+								<p class="mid">to the</p>
+								<br>
+								<p class="last">
+									Oven
+									<span>Universe</span>
+								</p>
 							</div>
-						</a>
+							<div class="banner-img2">
+								<a href="#">
+									<img src="./img/banner/chi/goobne_bg_2.png" alt="goobne_bg_2">
+									<button class="goobne-btn btn1">
+										<span><em>NEW</em><br />✨최강의<br>바사삭 등장</span>
+									</button>
+									<button class="goobne-btn btn2"></button>
+									<button class="goobne-menu-btn btn1">Oven</button>
+									<button class="goobne-menu-btn btn2">Basasak</button>
+								</a>
+							</div>
+						</div>
 					</div>
 					<div class="banner-bg banner-bg3">
 						<img class="banner-bg-img" src="./img/banner/dduk/ddeok.jpeg" alt="ddeok">
@@ -211,6 +213,108 @@
 						</div>
 					</div>
 
+				</div>
+			</div>
+			<div class="con-box goobnews">
+				<div class="goobnews-pc flex">
+					<div class="news-img-wrap">
+						<div class="news-around-wrap">
+							<h2>GoobNe</h2>
+							<div class="news-around">
+								<div class="news-img">
+									<img src="./img/goobnews/p_1.png" alt="">
+								</div>
+								<div class="news-around-text-wrap">
+									<div class="news-around-text flex-center">
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									</div>
+									<div class="news-around-text flex-center">
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									</div>
+									<div class="news-around-text flex-center">
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									</div>
+									<div class="news-around-text flex-center">
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+										<span
+											class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="news-text-wrap flex-center">
+						<div class="news-text news-title flex-center">
+							<h3>GoobNews</h3>
+						</div>
+						<div class="news-text news-content flex-center active">
+							<p>굽네, 포토제닉 테이스트 ‘르세라핌 인 시카고’ 광고 공개</p>
+						</div>
+						<div class="news-text news-content flex-center">
+							<p>[브랜드] 굽네, 모델로 르세라핌 발탁…신제품 티저 광고 공개</p>
+						</div>
+						<div class="news-text news-content flex-center">
+							<p>[브랜드] 굽네, 대한적십자사와 MOU 체결… 생명나눔 캠페인 앞장</p>
+						</div>
+						<div class="news-text news-content flex-center">
+							<p>[신제품] 굽네, 오리지널∙고추바사삭 ‘곱빼기’ 출시… ’먹그레이드’ 트렌드 겨냥</p>
+						</div>
+					</div>
+				</div>
+				<div class="goobnews-m">
+					<div class="inner">
+						<h3>Goobnews</h2>
+							<ul>
+								<li>
+									<div class="mgoobnews-img">
+										<img src="./img/goobnews/m_1.png" alt="m_1">
+									</div>
+									<div class="mgoobnews-text">
+										<h4>[브랜드]</h4>
+										<p>굽네, 포토제닉 테이스트 ‘르세라핌 인 시카고’ 광고 공개</p>
+									</div>
+								</li>
+								<li>
+									<div class="mgoobnews-img">
+										<img src="./img/goobnews/m_2.png" alt="m_2">
+									</div>
+									<div class="mgoobnews-text">
+										<h4>[브랜드]</h4>
+										<p>굽네, 모델로 르세라핌 발탁…신제품 티저 광고 공개</p>
+									</div>
+								</li>
+								<li>
+									<div class="mgoobnews-img">
+										<img src="./img/goobnews/m_3.jpg" alt="m_3">
+									</div>
+									<div class="mgoobnews-text">
+										<h4>[브랜드]</h4>
+										<p>굽네, 대한적십자사와 MOU 체결… 생명나눔 캠페인 앞장</p>
+									</div>
+								</li>
+								<li>
+									<div class="mgoobnews-img">
+										<img src="./img/goobnews/m_4.png" alt="m_4">
+									</div>
+									<div class="mgoobnews-text">
+										<h4>[신제품]</h4>
+										<p>굽네, 오리지널∙고추바사삭 ‘곱빼기’ 출시… ’먹그레이드’ 트렌드 겨냥</p>
+									</div>
+								</li>
+							</ul>
+					</div>
 				</div>
 			</div>
 			<div class="con-box oven-menu flex-between">
@@ -250,99 +354,6 @@
 								<a href="#"><img src="./img/oven_menu/4.jpg" alt="best_set"></a>
 							</div>
 						</div>
-					</div>
-				</div>
-			</div>
-			<div class="con-box goobnews">
-				<div class="goobnews-pc flex">
-					<div class="news-img-wrap">
-						<div class="news-around-wrap">
-							<h2>GoobNe</h2>
-							<div class="news-around">
-								<div class="news-img">
-									<img src="./img/goobnews/p_1.png" alt="">
-								</div>
-								<div class="news-around-text-wrap">
-									<div class="news-around-text flex-center">
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-									</div>
-									<div class="news-around-text flex-center">
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-									</div>
-									<div class="news-around-text flex-center">
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-									</div>
-									<div class="news-around-text flex-center">
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-										<span class="text-goobne">GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;GoobNe&nbsp;</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="news-text-wrap flex-center">
-						<div class="news-text news-title flex-center">
-							<h3>GoobNews</h3>
-						</div>
-						<div class="news-text news-content flex-center active">
-							<p>굽네, 포토제닉 테이스트 ‘르세라핌 인 시카고’ 광고 공개</p>
-						</div>
-						<div class="news-text news-content flex-center">
-							<p>[브랜드] 굽네, 모델로 르세라핌 발탁…신제품 티저 광고 공개</p>
-						</div>
-						<div class="news-text news-content flex-center">
-							<p>[브랜드] 굽네, 대한적십자사와 MOU 체결… 생명나눔 캠페인 앞장</p>
-						</div>
-						<div class="news-text news-content flex-center">
-							<p>[신제품] 굽네, 오리지널∙고추바사삭 ‘곱빼기’ 출시… ’먹그레이드’ 트렌드 겨냥</p>
-						</div>
-					</div>
-				</div>
-				<div class="goobnews-m">
-					<div class="inner">
-						<h3>Goobnews</h2>
-						 <ul>
-							<li>
-								<div class="mgoobnews-img">
-									<img src="./img/goobnews/m_1.png" alt="m_1">
-								</div>
-								<div class="mgoobnews-text">
-									<h4>[브랜드]</h4>
-									<p>굽네, 포토제닉 테이스트 ‘르세라핌 인 시카고’ 광고 공개</p>
-								</div>
-							</li>
-							<li>
-								<div class="mgoobnews-img">
-									<img src="./img/goobnews/m_2.png" alt="m_2">
-								</div>
-								<div class="mgoobnews-text">
-									<h4>[브랜드]</h4>
-									<p>굽네, 모델로 르세라핌 발탁…신제품 티저 광고 공개</p>
-								</div>
-							</li>
-							<li>
-								<div class="mgoobnews-img">
-									<img src="./img/goobnews/m_3.jpg" alt="m_3">
-								</div>
-								<div class="mgoobnews-text">
-									<h4>[브랜드]</h4>
-									<p>굽네, 대한적십자사와 MOU 체결… 생명나눔 캠페인 앞장</p>
-								</div>
-							</li>
-							<li>
-								<div class="mgoobnews-img">
-									<img src="./img/goobnews/m_4.png" alt="m_4">
-								</div>
-								<div class="mgoobnews-text">
-									<h4>[신제품]</h4>
-									<p>굽네, 오리지널∙고추바사삭 ‘곱빼기’ 출시… ’먹그레이드’ 트렌드 겨냥</p>
-								</div>
-							</li>
-						 </ul>
 					</div>
 				</div>
 			</div>
@@ -429,7 +440,7 @@
 						</div>
 						<div class="oii-text">
 							<h3>굽네ㅣ르세라핌<br>LE SSERAFIM in CHICAGO🍕</h3>
-							<p>넋놓고 바라보게 돼서<br> 
+							<p>넋놓고 바라보게 돼서<br>
 								최소 6번은 돌려봐야 예의인<br>
 								르세라핌 in 시카고 풀버전🤍</p>
 							<a href="#">영상 보러가기</a>
@@ -508,11 +519,17 @@
 				<div class="footer-down">
 					<ul>
 						<li>주식회사 지앤푸드 대표자 : 정태용</li>
-						<li><address>주소 서울특별시 강서구 강서로 318 (내발산동 677) 지앤빌딩</address></li>
+						<li>
+							<address>주소 서울특별시 강서구 강서로 318 (내발산동 677) 지앤빌딩</address>
+						</li>
 						<li>사업자등록번호 137-81-80324</li>
 						<li>통신판매업신고번호 제 2014-서울양천-0426호</li>
-						<li><address>TEL 02-2648-2005</address></li>
-						<li><address>FAX 02-2648-9458</address></li>
+						<li>
+							<address>TEL 02-2648-2005</address>
+						</li>
+						<li>
+							<address>FAX 02-2648-9458</address>
+						</li>
 						<li>광고 제휴 문의 mkt@gngrp.com</li>
 					</ul>
 					<p>© 2009-2016 GOOBNE.CO.ALL RIGHT RESERVED</p>
