파비콘 완성

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang='ko'>
 
 <head>
-	<title> </title>
+	<title>굽네치킨</title>
 	<meta charset='utf-8'>
 	<meta name='Viewport' content='width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.6'>
-	<meta name='Title' content=''>
-	<meta name='Subject' content=''>
-	<meta name='Keywords' content=''>
-	<meta name='Author' content=''>
+	<meta name='Title' content='굽네치킨'>
+	<meta name='Subject' content='치킨'>
+	<meta name='Keywords' content='굽네치킨, 치킨'>
+	<meta name='Author' content='SeongHo'>
 	<meta name='Publisher' content=''>
 	<meta name='Description' content=''>
-	<meta name='Author-Date' content=''>
+	<meta name='Author-Date' content='2023.05.14 ~ 2023.06.07'>
 	<meta name='Copyright' content=''>
 	<meta name='Robots' content='index,follow'>
 
@@ -25,6 +25,25 @@
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css'
 		integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!-- favicon -->
+	<link rel="apple-touch-icon" sizes="57x57" href="./img/favi/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./img/favi/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./img/favi/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./img/favi/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./img/favi/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./img/favi/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./img/favi/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./img/favi/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/favi/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="./img/favi/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/favi/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./img/favi/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/favi/favicon-16x16.png">
+	<link rel="manifest" href="./img/favi/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
 	<script type="text/javascript" src="js/slick.min.js" defer></script>
