로그인 회원가입 버튼 추가

--- a/index.html
+++ b/index.html
@@ -79,7 +79,13 @@
 							<li><a href="#">이벤트</a></li>
 						</ul>
 					</div>
-					<div class="more-btn">
+					<div class="more-btn flex-between-center">
+						<div class="sign">
+							<ul class="flex-between">
+								<li><a href="#">Login</a></li>
+								<li><a href="#">Join</a></li>
+							</ul>
+						</div>
 						<a href="#" class="more-btn-wrap db">
 							<span class="bar bar1"></span>
 							<span class="bar bar2"></span>
