회원가입 페이지 만들기

--- a/signup.html
+++ b/signup.html
@@ -20,7 +20,7 @@
 	<link rel="stylesheet" type="text/css" href="./css/slick-theme.css" />
 	<link rel='stylesheet' href='./css/slick.css'>
 	<link rel="stylesheet" href="./css/root.css">
-	<link rel='stylesheet' href='./css/login.css'>
+	<link rel='stylesheet' href='./css/signup.css'>
 
 	<link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css'
 		integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
@@ -47,7 +47,7 @@
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" defer></script>
 	<script type="text/javascript" src="js/slick.min.js" defer></script>
-	<script src="./js/login.js" defer></script>
+	<script src="./js/signup.js" defer></script>
 
 </head>
 
