--- a/signup.html
+++ b/signup.html
@@ -162,7 +162,35 @@
 			</div>
 		</aside>
 		<div id="content">
-
+			<article class="join">
+				<div class="joinForm-inner">
+					<h1>회원가입</h1>
+					<form id="joinForm" name="joinForm" method="post">
+						<section class="join_input">
+							<div class="tit-area">
+								<p class="tit">기본정보</p>
+								<p class="msg">
+									<i>*</i>
+									표시는 반드시 입력하셔야 하는 항목입니다.
+								</p>
+							</div>
+							<div class="input-area">
+								// 이름
+								<div class="sec-line">
+									<label for="user-name" class="tit">이름<i>*</i></label>
+									<input type="text" id="user-name" name="user-name" placeholder="이름을 입력해주세요" >
+								</div>
+								<div class="sec-line"></div>
+								<div class="sec-line"></div>
+								<div class="sec-line"></div>
+								<div class="sec-line"></div>
+								<div class="sec-line"></div>
+								<div class="sec-line"></div>
+							</div>
+						</section>
+					</form>
+				</div>
+			</article>
 		</div>
 		<div id="footer" class="footer">
 			<div class="inner">
