--- a/index.html
+++ b/index.html
@@ -86,6 +86,30 @@
 								<li><a href="#">Join</a></li>
 							</ul>
 						</div>
+						<div class="join">
+							<div class="jimg">
+
+							</div>
+							<div class="jreg">
+								<h2>회원가입</h2>
+								<div class="jleft">
+									<div class="inputArea">
+										<label for="name">이름</label>
+										<span id="nameMes" class="message"></span>
+										<input type="text" id="name" class="line" required size="30" placeholder="이름">
+									</div>
+								</div>
+								<div class="jright">
+									<div class="inputArea id-section">
+										<label for="idArea">아이디</label>
+										<span id="idMes" class="message"></span>
+										<input type="text" id="idArea" class="line" required size="30" placeholder="아이디" value="">
+										<button>중복확인</button>
+									</div>
+								</div>
+								<div class="jbottome"></div>
+							</div>
+						</div>
 						<a href="#" class="more-btn-wrap db">
 							<span class="bar bar1"></span>
 							<span class="bar bar2"></span>
